--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,13 @@ node_modules/
 
 # pip
 src/
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
